--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -20,3 +20,8 @@ jobs:
       run: cargo build --verbose
     - name: Run tests
       run: cargo test --verbose
+    - name: rust-rustfmt-check
+      uses: mbrobbel/rustfmt-check@0.3.0
+      with:
+        token: ${{ secrets.GITHUB_TOKEN }}
+        
