--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ chrono = "0.4"
 url = "2.2.2"
 clap = "3.0.0-beta.2"
 serde = "^1.0"
+serde_derive = "1.0"
 serde_json = "^1.0"
 yup-oauth2 = "^5.0"
 sheets = "0.1.10"
@@ -22,3 +23,4 @@ reqwest = "0.11.3"
 hyper = "^0.14"
 hyper-rustls = "^0.22"
 snafu = "0.6.10"
+toml = "0.5.8"
