--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,10 @@ fehler = "1"
 chrono = "0.4"
 url = "2.2.2"
 clap = "3.0.0-beta.2"
+serde = "^1.0"
+serde_json = "^1.0"
+yup-oauth2 = "^5.0"
+sheets = "0.1.10"
+reqwest = "0.11.3"
+hyper = "^0.14"
+hyper-rustls = "^0.22"
