--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -2,26 +2,24 @@ name: Rust
 
 on:
   push:
-    branches: [ main ]
+    branches: [main, staging, trying]
   pull_request:
-    branches: [ main ]
+    branches: [main]
 
 env:
   CARGO_TERM_COLOR: always
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
-    - name: Build
-      run: cargo build --verbose
-    - name: Run tests
-      run: cargo test --verbose
-    - name: rust-rustfmt-check
-      uses: mbrobbel/rustfmt-check@0.3.0
-      with:
-        token: ${{ secrets.GITHUB_TOKEN }}
-        
+      - uses: actions/checkout@v2
+      - name: Build
+        run: cargo build --verbose
+      - name: Run tests
+        run: cargo test --verbose
+      - name: rust-rustfmt-check
+        uses: mbrobbel/rustfmt-check@0.3.0
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
