--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ edition = "2018"
 [dependencies]
 octocrab = "0.9.0"
 tokio = { version = "1", features = ["full"] }
-anyhow = "1"
+stable-eyre = "0.2.2"
 fehler = "1"
 chrono = "0.4"
 url = "2.2.2"
