update 'report-template.toml' to include start and end date

--- a/report-template.toml
+++ b/report-template.toml
@@ -12,7 +12,8 @@ repos = [
 ]
 
 [data_source]
-number_of_days = 30
+start_date = 2021-07-01
+end_date = 2021-08-01
 
 [high_contributor]
 high_reviewer_min_percentage = 10
