--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,14 +2,14 @@
 name = "optopodi"
 version = "0.1.0"
 authors = ["Niko Matsakis <niko@alum.mit.edu>"]
-edition = "2018"
+edition = "2021"
 
 [dependencies]
 octocrab = "0.12.0"
 tokio = { version = "1", features = ["full"] }
 stable-eyre = "0.2.2"
 fehler = "1"
-clap = "3.0.0-beta.2"
+clap = { version = "3.0.0-beta.2", features = ["derive"] }
 serde = { version = "^1.0", features = ["derive"] }
 serde_json = "^1.0"
 toml = "0.5.8"
